# Zakati

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  nixpacks.toml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/scripts/: seed-lembaga.ts  setup-demo.ts
backend/src/: server.ts
backend/src/config/: index.ts
backend/src/lib/: asnaf.test.ts  asnaf.ts  errors.ts  idr.ts  lembagaStore.test.ts  lembagaStore.ts  logger.ts  mustahiqStore.test.ts  mustahiqStore.ts  x402.test.ts  x402.ts  zakat.test.ts  zakat.ts
backend/src/routes/: harga.ts  lembaga.ts  mustahiq.ts  tracker.ts  verify.ts  zakat.ts
backend/src/types/: index.ts
contracts/zakat-escrow/: Cargo.toml  README.md
contracts/zakat-escrow/src/: lib.rs  test.rs
docs/: demo-script.md  soroban-escrow-poc.md  test-data.md
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppNav.tsx  BuktiSetor.tsx  ConnectWalletCard.tsx  MarketingNav.tsx  Nav.tsx  RiwayatZakat.tsx  Sidebar.tsx
frontend/config/: index.ts
frontend/context/: FreighterProvider.tsx
frontend/hooks/: useAnchorDeposit.ts  useBatchDistribution.ts  useEscrow.ts  useFreighter.ts  useHarga.ts  useStellarAccount.ts  useTransactionStream.ts  useZakatPayment.ts
frontend/lib/: api.ts  asnaf.test.ts  asnaf.ts  zakatCalc.test.ts  zakatCalc.ts  zakatTypes.test.ts  zakatTypes.ts
frontend/types/: index.ts
(+32 files in other folders)
