[package]
name = "zakat-escrow"
version = "0.1.0"
edition = "2021"
publish = false
description = "Soroban escrow contract for transparent, rule-enforced zakat distribution (PoC)."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
